# addtwocicd

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ci-errors.txt  pyproject.toml
.github/workflows/: ci.yml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
src/app/: main.py
tests/: test_app.py
